--- a/installation/configs/htaccess.dist
+++ b/installation/configs/htaccess.dist
@@ -58,6 +58,7 @@ RewriteRule ^([A-Za-z0-9\_\-]+)\/(.*)$ index.php?h=$1&p=$2 [QSA,L]
 	php_value post_max_size 8388608
 	php_value upload_max_filesize 5242880
 	php_value default_charset "UTF-8"
+	php_flag session.cookie_httponly on
 </IfModule>
 
 <IfModule mod_php7.c>
@@ -66,4 +67,5 @@ RewriteRule ^([A-Za-z0-9\_\-]+)\/(.*)$ index.php?h=$1&p=$2 [QSA,L]
 	php_value post_max_size 8388608
 	php_value upload_max_filesize 5242880
 	php_value default_charset "UTF-8"
+	php_flag session.cookie_httponly on
 </IfModule>
