--- a/installation/configs/htaccess.dist
+++ b/installation/configs/htaccess.dist
@@ -52,20 +52,11 @@ RewriteRule ^([A-Za-z0-9\_\-]+)\/(.*)$ index.php?h=$1&p=$2 [QSA,L]
 
 </IfModule>
 
-<IfModule mod_php5.c>
-	php_value memory_limit 128M
-	php_value register_globals 0
-	php_value post_max_size 8388608
-	php_value upload_max_filesize 5242880
-	php_value default_charset "UTF-8"
-	php_flag session.cookie_httponly on
-</IfModule>
-
 <IfModule mod_php7.c>
-	php_value memory_limit 128M
+	php_value memory_limit 256M
 	php_value register_globals 0
-	php_value post_max_size 8388608
-	php_value upload_max_filesize 5242880
+	php_value post_max_size 50M
+	php_value upload_max_filesize 40M
 	php_value default_charset "UTF-8"
 	php_flag session.cookie_httponly on
 </IfModule>
