--- a/installation/configs/htaccess.dist
+++ b/installation/configs/htaccess.dist
@@ -1,10 +1,10 @@
- # OpenSource-SocialNetwork
+ # Open Source Social Network
  #
- # @package   (Informatikon.com).ossn
+ # @package   .htaccess.ossn
  # @author    OSSN Core Team <info@opensource-socialnetwork.org>
- # @copyright 2014 iNFORMATIKON TECHNOLOGIES
- # @license   General Public Licence http://opensource-socialnetwork.org/licence 
- # @link      http://www.opensource-socialnetwork.org 
+ # @copyright (c) Engr. Syed Arsalan Hussain Shah (OpenTeknik LLC)
+ # @license   OPEN SOURCE SOCIAL NETWORK LICENSE https://opensource-socialnetwork.org/licence 
+ # @link      https://www.opensource-socialnetwork.org 
 
 Options -Indexes
 Options +SymlinksIfOwnerMatch
