--- a/installation/configs/htaccess.dist
+++ b/installation/configs/htaccess.dist
@@ -15,6 +15,11 @@ DirectoryIndex index.php
 	deny from all
 </Files>
 
+<Files ".user.ini">
+	order allow,deny
+	deny from all
+</Files>
+
 <FilesMatch "(nginx|htaccess).dist">
 	order allow,deny
 	deny from all
@@ -53,15 +58,6 @@ RewriteCond %{REQUEST_FILENAME} !-d
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteRule ^([A-Za-z0-9\_\-]+)\/(.*)$ index.php?h=$1&p=$2 [QSA,L]
 
-</IfModule>
-
-<IfModule mod_php7.c>
-	php_value memory_limit 256M
-	php_value register_globals 0
-	php_value post_max_size 50M
-	php_value upload_max_filesize 40M
-	php_value default_charset "UTF-8"
-	php_flag session.cookie_httponly on
 </IfModule>
 
 #https://github.com/nextcloud/server/issues/26569
