--- a/installation/configs/user.ini.dist
+++ b/installation/configs/user.ini.dist
@@ -4,9 +4,9 @@
 ; Generated in both conditions         ;
 ;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
 
-post_max_size=50M
-upload_max_filesize=40M
-memory_limit=256M
+post_max_size=105M
+upload_max_filesize=100M
+memory_limit=512M
 
 register_globals=0
 default_charset="utf-8"
